# AI-Startup-builder

./: Dockerfile  README.md  conversation.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt
multiagent_startup_builder/: crew.py  memory.py
multiagent_startup_builder/config/: agents.yaml  tasks.yaml
