[project]
name = "multiagent_startup_builder"
version = "0.1.0"
description = "multiagent_startup_builder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
multiagent_startup_builder = "multiagent_startup_builder.main:run"
run_crew = "multiagent_startup_builder.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
